# turagenstvo

./: manage.py  pyproject.toml
turag/: apps.py  models.py
turag/migrations/: 0001_initial.py
turagenstv/: asgi.py  settings.py  urls.py  wsgi.py
turagentstvo/: manage.py  pyproject.toml
turagentstvo/templates/: base.html  card.html  catalog.html  index.html
turagentstvo/turag/: admin.py  apps.py  models.py  urls.py  views.py
turagentstvo/turag/migrations/: 0001_initial.py  0002_rename_title_addservice_name_and_more.py  0003_tour_duration.py  0004_remove_program_duration_remove_program_persons_and_more.py  0005_rename_tour_operator_touroperator_hotel_country.py  0006_alter_touroperator_country.py  0007_alter_tour_comments.py  0008_alter_tour_persons.py
turagentstvo/turag/static/: style.css
turagentstvo/turagenstv/: asgi.py  settings.py  urls.py  wsgi.py
